--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
 <script>
   sessionStorage.redirect = location.href;
 </script>
-<meta http-equiv="refresh" content="0;URL='catalog-demo.interra.io'"></meta>
+<meta http-equiv="refresh" content="0;URL='/'"></meta>
